--- a/src/component/OrSlider/OrSlider.scss
+++ b/src/component/OrSlider/OrSlider.scss
@@ -1,13 +1,10 @@
 .slider-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   
     margin: 10px 0;
 }
 
 .slider {
-    width: 100%;
-    margin: 10px 0;
+   width: 100px;
 }
 
 .labels {
