--- a/src/bace/_directory.scss
+++ b/src/bace/_directory.scss
@@ -1,283 +1,280 @@
-:root{
-
---color-yoko-2: #00010a;
---color-yoko-4: #000214;
---color-yoko-6: #00031e;
---color-yoko-8: #00031e;
---color-yoko-10: #000532;
---color-yoko-20: #010b65;
---color-yoko-30: #011097;
---color-yoko-40: #0216ca;
---color-yoko-50: #021cfc;
---color-yoko-60: #3549fd;
---color-yoko-70: #6776fd;
---color-yoko-80: #9aa4fe;
---color-yoko-90: #ccd1fe;
---color-yoko-92: #d7dbff;
---color-yoko-94: #e1e4ff;
---color-yoko-96: #ebedff;
---color-yoko-98: #f5f6ff;
---color-yoko-99: #fafaff;
---color-school-bus-yellow-2: #060500;
---color-school-bus-yellow-4: #0b0a00;
---color-school-bus-yellow-6: #110e00;
---color-school-bus-yellow-8: #161300;
---color-school-bus-yellow-10: #1c1800;
---color-school-bus-yellow-20: #554800;
---color-school-bus-yellow-30: #8e7800;
---color-school-bus-yellow-40: #c6a800;
---color-school-bus-yellow-50: #ffd800;
---color-school-bus-yellow-60: #ffe139;
---color-school-bus-yellow-70: #ffe971;
---color-school-bus-yellow-80: #fff2aa;
---color-school-bus-yellow-90: #fffbe3;
---color-school-bus-yellow-92: #fffce9;
---color-school-bus-yellow-94: #fffdee;
---color-school-bus-yellow-96: #fffdf4;
---color-school-bus-yellow-98: #fffef9;
---color-black-white-2: #030303;
---color-black-white-4: #060606;
---color-black-white-6: #080808;
---color-black-white-8: #0b0b0b;
---color-black-white-10: #0e0e0e;
---color-black-white-20: #2b2b2b;
---color-black-white-30: #474747;
---color-black-white-40: #646464;
---color-black-white-50: #808080;
---color-black-white-60: #9c9c9c;
---color-black-white-70: #b8b8b8;
---color-black-white-80: #d5d5d5;
---color-black-white-90: #f1f1f1;
---color-black-white-92: #f3f3f3;
---color-black-white-94: #f7f7f7;
---color-black-white-96: #f9f9f9;
---color-black-white-98: #fcfcfc;
---color-black-white-0: #000000;
---color-black-white-100: #ffffff;
---color-full-red-10: #310202;
---color-full-red-20: #620404;
---color-full-red-30: #940505;
---color-full-red-40: #c50808;
---color-full-red-50: #f60a0a;
---color-full-red-60: #f83a3a;
---color-full-red-70: #fa6b6b;
---color-full-red-80: #ffaaaa;
---color-full-red-90: #ffe3e3;
---space-0: 0px;
---space-0-125: 2px;
---space-0-25: 4px;
---space-0-50: 8px;
---space-0-75: 12px;
---space-1: 16px;
---space-1-5: 24px;
---space-2: 32px;
---space-2-5: 40px;
---space-3: 48px;
---space-4: 64px;
---space-5: 80px;
---space-6: 96px;
---color-dark-pastel-green-2: #000401;
---color-dark-pastel-green-4: #000803;
---color-dark-pastel-green-6: #000d04;
---color-dark-pastel-green-8: #001106;
---color-dark-pastel-green-10: #001507;
---color-dark-pastel-green-20: #014014;
---color-dark-pastel-green-30: #026b21;
---color-dark-pastel-green-40: #02952f;
---color-dark-pastel-green-50: #03c03c;
---color-dark-pastel-green-60: #3bce67;
---color-dark-pastel-green-70: #73dc93;
---color-dark-pastel-green-80: #abeabe;
---color-dark-pastel-green-90: #e3f8e9;
---color-dark-pastel-green-92: #e9f9ed;
---color-dark-pastel-green-94: #eefbf2;
---color-dark-pastel-green-96: #f4fcf6;
---color-dark-pastel-green-98: #f9fefc;
---color-yoko-45: #0219e3;
---color-yoko-55: #1c33fd;
---color-yoko-65: #4f60fd;
---color-full-red-2: #0a0000;
---color-full-red-4: #140101;
---color-full-red-6: #1d0101;
---color-full-red-8: #270202;
---color-full-red-92: #ffe9e9;
---color-full-red-94: #ffeeee;
---color-full-red-96: #fff4f4;
---color-full-red-98: #fff9f9;
---color-yoko-100: #ffffff;
---color-yoko-0: #000000;
---color-full-red-100: #ffffff;
---color-full-red-0: #000000;
---color-school-bus-yellow-100: #ffffff;
---color-school-bus-yellow-0: #000000;
---color-dark-pastel-green-0: #000000;
---color-dark-pastel-green-100: #ffffff;
---color-full-red-55: #f72222;
---color-full-red-65: #f95353;
---color-full-red-25: #7b0505;
---color-full-red-45: #de0909;
---color-full-red-35: #ad0707;
---color-school-bus-yellow-25: #716000;
---color-school-bus-yellow-35: #aa9000;
---color-school-bus-yellow-45: #e3c000;
---color-school-bus-yellow-55: #ffdc1c;
---color-school-bus-yellow-65: #ffe555;
---color-dark-pastel-green-25: #01551b;
---color-dark-pastel-green-35: #028028;
---color-dark-pastel-green-45: #03ab35;
---color-dark-pastel-green-55: #1fc752;
---color-dark-pastel-green-65: #57d57d;
---color-yoko-25: #020e7e;
---color-yoko-35: #0213b1;
---color-tomato-orange-0: #000000;
---color-tomato-orange-2: #060201;
---color-tomato-orange-4: #0b0402;
---color-tomato-orange-6: #110604;
---color-tomato-orange-8: #160805;
---color-tomato-orange-10: #1c0a06;
---color-tomato-orange-20: #551e12;
---color-tomato-orange-25: #712818;
---color-tomato-orange-30: #8e321e;
---color-tomato-orange-35: #aa3c24;
---color-tomato-orange-40: #c6462a;
---color-tomato-orange-45: #e35030;
---color-tomato-orange-50: #ff5a36;
---color-tomato-orange-55: #ff6c4c;
---color-tomato-orange-60: #ff7f63;
---color-tomato-orange-65: #ff9179;
---color-tomato-orange-70: #ffa38f;
---color-tomato-orange-80: #ffc8bc;
---color-tomato-orange-90: #ffede9;
---color-tomato-orange-92: #fff1ed;
---color-tomato-orange-94: #fff4f2;
---color-tomato-orange-96: #fff8f6;
---color-tomato-orange-98: #fffbfb;
---color-tomato-orange-85: #ffdad2;
---color-tomato-orange-100: #ffffff;
---radius-0: 0px;
---radius-0-125: 2px;
---radius-0-25: 4px;
---radius-0-50: 8px;
---radius-0-75: 12px;
---radius-1: 16px;
---radius-6: 96px;
---color-alice-blue-0: #000000;
---color-alice-blue-2: #050505;
---color-alice-blue-4: #0a0b0b;
---color-alice-blue-6: #101010;
---color-alice-blue-8: #151616;
---color-alice-blue-10: #1a1b1b;
---color-alice-blue-20: #4f5252;
---color-alice-blue-25: #6a6d6e;
---color-alice-blue-30: #848989;
---color-alice-blue-35: #9fa4a5;
---color-alice-blue-40: #b9bfc0;
---color-alice-blue-45: #d4dbdc;
---color-alice-blue-50: #eef6f7;
---color-alice-blue-55: #f0f7f8;
---color-alice-blue-60: #f2f8f9;
---color-alice-blue-65: #f4f9fa;
---color-alice-blue-70: #f6fafb;
---color-alice-blue-80: #f9fcfc;
---color-alice-blue-90: #fdfefe;
---color-alice-blue-92: #fdfefe;
---color-alice-blue-94: #fefefe;
---color-alice-blue-96: #feffff;
---color-alice-blue-98: #ffffff;
---color-alice-blue-100: #ffffff;
---color-alice-blue-15: #353737;
---color-alice-blue-75: #f7fbfb;
---color-tomato-orange-75: #ffb6a6;
---color-black-white-75: #c7c7c7;
---color-black-white-15: #1c1c1c;
---color-black-white-25: #393939;
---color-black-white-35: #555555;
---color-black-white-45: #727272;
---color-black-white-55: #8e8e8e;
---color-black-white-65: #aaaaaa;
---color-black-white-85: #e3e3e3;
---color-alice-blue-85: #fbfdfd;
---color-tomato-orange-15: #39140c;
---color-full-red-15: #380000;
---color-full-red-75: #ff8e8e;
---color-full-red-85: #ffc6c6;
---color-school-bus-yellow-15: #393000;
---color-school-bus-yellow-85: #fff6c6;
---color-school-bus-yellow-75: #ffee8e;
---color-dark-pastel-green-85: #c7f1d4;
---color-dark-pastel-green-75: #8fe3a8;
---color-dark-pastel-green-15: #012b0d;
---color-electric-indigo-0: #000000;
---color-electric-indigo-2: #020006;
---color-electric-indigo-4: #05000b;
---color-electric-indigo-6: #070011;
---color-electric-indigo-8: #0a0016;
---color-electric-indigo-10: #0c001c;
---color-electric-indigo-15: #190039;
---color-electric-indigo-20: #250055;
---color-electric-indigo-25: #310071;
---color-electric-indigo-30: #3e008e;
---color-electric-indigo-35: #4a00aa;
---color-electric-indigo-40: #5600c6;
---color-electric-indigo-45: #6300e3;
---color-electric-indigo-50: #6f00ff;
---color-electric-indigo-55: #7f1cff;
---color-electric-indigo-60: #8f39ff;
---color-electric-indigo-65: #9f55ff;
---color-electric-indigo-70: #af71ff;
---color-electric-indigo-75: #bf8eff;
---color-electric-indigo-80: #cfaaff;
---color-electric-indigo-85: #dfc6ff;
---color-electric-indigo-90: #efe3ff;
---color-electric-indigo-92: #f2e9ff;
---color-electric-indigo-94: #f5eeff;
---color-electric-indigo-96: #f9f4ff;
---color-electric-indigo-98: #fcf9ff;
---color-electric-indigo-100: #ffffff;
---color-yoko-subtle-0: #021cfc;
---color-yoko-subtle-10: #021cfc;
---color-yoko-subtle-20: #021cfc;
---color-yoko-subtle-30: #021cfc;
---color-yoko-subtle-40: #021cfc;
---color-black-white-subtle-dark-10: #000000;
---color-yoko-subtle-15: #021cfc;
---color-yoko-subtle-25: #021cfc;
---color-yoko-subtle-35: #021cfc;
---color-black-white-subtle-dark-15: #000000;
---color-yoko-subtle-45: #021cfc;
---color-black-white-subtle-dark-20: #000000;
---color-yoko-subtle-50: #021cfc;
---color-black-white-subtle-dark-25: #000000;
---color-black-white-subtle-dark-30: #000000;
---color-yoko-subtle-5: #021cfc;
---color-black-white-subtle-dark-35: #000000;
---color-black-white-subtle-dark-40: #000000;
---color-black-white-subtle-dark-45: #000000;
---color-black-white-subtle-dark-50: #000000;
---color-black-white-subtle-dark-5: #000000;
---color-black-white-subtle-light-5: #ffffff;
---color-black-white-subtle-light-10: #ffffff;
---color-black-white-subtle-light-15: #ffffff;
---color-black-white-subtle-light-20: #ffffff;
---color-black-white-subtle-light-25: #ffffff;
---color-black-white-subtle-light-30: #ffffff;
---color-black-white-subtle-light-35: #ffffff;
---color-black-white-subtle-light-40: #ffffff;
---color-black-white-subtle-light-45: #ffffff;
---color-black-white-subtle-light-50: #ffffff;
---color-black-white-subtle-dark-0: #000000;
---color-black-white-subtle-light-0: #ffffff;
---color-full-red-subtle-0: #f60a0a;
---color-full-red-subtle-5: #f60a0a;
---color-full-red-subtle-10: #f60a0a;
---color-full-red-subtle-15: #f60a0a;
---color-full-red-subtle-20: #f60a0a;
---color-full-red-subtle-25: #f60a0a;
---color-full-red-subtle-30: #f60a0a;
---color-full-red-subtle-35: #f60a0a;
---color-full-red-subtle-40: #f60a0a;
---color-full-red-subtle-45: #f60a0a;
---color-full-red-subtle-50: #f60a0a;
---radius-1-5: 24px;
---radius-2: 32px;
-}
+$color-yoko-2: #00010a;
+$color-yoko-4: #000214;
+$color-yoko-6: #00031e;
+$color-yoko-8: #00031e;
+$color-yoko-10: #000532;
+$color-yoko-20: #010b65;
+$color-yoko-30: #011097;
+$color-yoko-40: #0216ca;
+$color-yoko-50: #021cfc;
+$color-yoko-60: #3549fd;
+$color-yoko-70: #6776fd;
+$color-yoko-80: #9aa4fe;
+$color-yoko-90: #ccd1fe;
+$color-yoko-92: #d7dbff;
+$color-yoko-94: #e1e4ff;
+$color-yoko-96: #ebedff;
+$color-yoko-98: #f5f6ff;
+$color-yoko-99: #fafaff;
+$color-school-bus-yellow-2: #060500;
+$color-school-bus-yellow-4: #0b0a00;
+$color-school-bus-yellow-6: #110e00;
+$color-school-bus-yellow-8: #161300;
+$color-school-bus-yellow-10: #1c1800;
+$color-school-bus-yellow-20: #554800;
+$color-school-bus-yellow-30: #8e7800;
+$color-school-bus-yellow-40: #c6a800;
+$color-school-bus-yellow-50: #ffd800;
+$color-school-bus-yellow-60: #ffe139;
+$color-school-bus-yellow-70: #ffe971;
+$color-school-bus-yellow-80: #fff2aa;
+$color-school-bus-yellow-90: #fffbe3;
+$color-school-bus-yellow-92: #fffce9;
+$color-school-bus-yellow-94: #fffdee;
+$color-school-bus-yellow-96: #fffdf4;
+$color-school-bus-yellow-98: #fffef9;
+$color-black-white-2: #030303;
+$color-black-white-4: #060606;
+$color-black-white-6: #080808;
+$color-black-white-8: #0b0b0b;
+$color-black-white-10: #0e0e0e;
+$color-black-white-20: #2b2b2b;
+$color-black-white-30: #474747;
+$color-black-white-40: #646464;
+$color-black-white-50: #808080;
+$color-black-white-60: #9c9c9c;
+$color-black-white-70: #b8b8b8;
+$color-black-white-80: #d5d5d5;
+$color-black-white-90: #f1f1f1;
+$color-black-white-92: #f3f3f3;
+$color-black-white-94: #f7f7f7;
+$color-black-white-96: #f9f9f9;
+$color-black-white-98: #fcfcfc;
+$color-black-white-0: #000000;
+$color-black-white-100: #ffffff;
+$color-full-red-10: #310202;
+$color-full-red-20: #620404;
+$color-full-red-30: #940505;
+$color-full-red-40: #c50808;
+$color-full-red-50: #f60a0a;
+$color-full-red-60: #f83a3a;
+$color-full-red-70: #fa6b6b;
+$color-full-red-80: #ffaaaa;
+$color-full-red-90: #ffe3e3;
+$space-0: 0px;
+$space-0-125: 2px;
+$space-0-25: 4px;
+$space-0-50: 8px;
+$space-0-75: 12px;
+$space-1: 16px;
+$space-1-5: 24px;
+$space-2: 32px;
+$space-2-5: 40px;
+$space-3: 48px;
+$space-4: 64px;
+$space-5: 80px;
+$space-6: 96px;
+$color-dark-pastel-green-2: #000401;
+$color-dark-pastel-green-4: #000803;
+$color-dark-pastel-green-6: #000d04;
+$color-dark-pastel-green-8: #001106;
+$color-dark-pastel-green-10: #001507;
+$color-dark-pastel-green-20: #014014;
+$color-dark-pastel-green-30: #026b21;
+$color-dark-pastel-green-40: #02952f;
+$color-dark-pastel-green-50: #03c03c;
+$color-dark-pastel-green-60: #3bce67;
+$color-dark-pastel-green-70: #73dc93;
+$color-dark-pastel-green-80: #abeabe;
+$color-dark-pastel-green-90: #e3f8e9;
+$color-dark-pastel-green-92: #e9f9ed;
+$color-dark-pastel-green-94: #eefbf2;
+$color-dark-pastel-green-96: #f4fcf6;
+$color-dark-pastel-green-98: #f9fefc;
+$color-yoko-45: #0216ca;
+$color-yoko-55: #1c33fd;
+$color-yoko-65: #4f60fd;
+$color-full-red-2: #0a0000;
+$color-full-red-4: #140101;
+$color-full-red-6: #1d0101;
+$color-full-red-8: #270202;
+$color-full-red-92: #ffe9e9;
+$color-full-red-94: #ffeeee;
+$color-full-red-96: #fff4f4;
+$color-full-red-98: #fff9f9;
+$color-yoko-100: #ffffff;
+$color-yoko-0: #000000;
+$color-full-red-100: #ffffff;
+$color-full-red-0: #000000;
+$color-school-bus-yellow-100: #ffffff;
+$color-school-bus-yellow-0: #000000;
+$color-dark-pastel-green-0: #000000;
+$color-dark-pastel-green-100: #ffffff;
+$color-full-red-55: #f72222;
+$color-full-red-65: #f95353;
+$color-full-red-25: #7b0505;
+$color-full-red-45: #de0909;
+$color-full-red-35: #ad0707;
+$color-school-bus-yellow-25: #716000;
+$color-school-bus-yellow-35: #aa9000;
+$color-school-bus-yellow-45: #e3c000;
+$color-school-bus-yellow-55: #ffdc1c;
+$color-school-bus-yellow-65: #ffe555;
+$color-dark-pastel-green-25: #01551b;
+$color-dark-pastel-green-35: #028028;
+$color-dark-pastel-green-45: #03ab35;
+$color-dark-pastel-green-55: #1fc752;
+$color-dark-pastel-green-65: #57d57d;
+$color-yoko-25: #020e7e;
+$color-yoko-35: #0213b1;
+$color-tomato-orange-0: #000000;
+$color-tomato-orange-2: #060201;
+$color-tomato-orange-4: #0b0402;
+$color-tomato-orange-6: #110604;
+$color-tomato-orange-8: #160805;
+$color-tomato-orange-10: #1c0a06;
+$color-tomato-orange-20: #551e12;
+$color-tomato-orange-25: #712818;
+$color-tomato-orange-30: #8e321e;
+$color-tomato-orange-35: #aa3c24;
+$color-tomato-orange-40: #c6462a;
+$color-tomato-orange-45: #e35030;
+$color-tomato-orange-50: #ff5a36;
+$color-tomato-orange-55: #ff6c4c;
+$color-tomato-orange-60: #ff7f63;
+$color-tomato-orange-65: #ff9179;
+$color-tomato-orange-70: #ffa38f;
+$color-tomato-orange-80: #ffc8bc;
+$color-tomato-orange-90: #ffede9;
+$color-tomato-orange-92: #fff1ed;
+$color-tomato-orange-94: #fff4f2;
+$color-tomato-orange-96: #fff8f6;
+$color-tomato-orange-98: #fffbfb;
+$color-tomato-orange-85: #ffdad2;
+$color-tomato-orange-100: #ffffff;
+$radius-0: 0px;
+$radius-0-125: 2px;
+$radius-0-25: 4px;
+$radius-0-50: 8px;
+$radius-0-75: 12px;
+$radius-1: 16px;
+$radius-6: 96px;
+$color-alice-blue-0: #000000;
+$color-alice-blue-2: #050505;
+$color-alice-blue-4: #0a0b0b;
+$color-alice-blue-6: #101010;
+$color-alice-blue-8: #151616;
+$color-alice-blue-10: #1a1b1b;
+$color-alice-blue-20: #4f5252;
+$color-alice-blue-25: #6a6d6e;
+$color-alice-blue-30: #848989;
+$color-alice-blue-35: #9fa4a5;
+$color-alice-blue-40: #b9bfc0;
+$color-alice-blue-45: #d4dbdc;
+$color-alice-blue-50: #eef6f7;
+$color-alice-blue-55: #f0f7f8;
+$color-alice-blue-60: #f2f8f9;
+$color-alice-blue-65: #f4f9fa;
+$color-alice-blue-70: #f6fafb;
+$color-alice-blue-80: #f9fcfc;
+$color-alice-blue-90: #fdfefe;
+$color-alice-blue-92: #fdfefe;
+$color-alice-blue-94: #fefefe;
+$color-alice-blue-96: #feffff;
+$color-alice-blue-98: #ffffff;
+$color-alice-blue-100: #ffffff;
+$color-alice-blue-15: #353737;
+$color-alice-blue-75: #f7fbfb;
+$color-tomato-orange-75: #ffb6a6;
+$color-black-white-75: #c7c7c7;
+$color-black-white-15: #1c1c1c;
+$color-black-white-25: #393939;
+$color-black-white-35: #555555;
+$color-black-white-45: #727272;
+$color-black-white-55: #8e8e8e;
+$color-black-white-65: #aaaaaa;
+$color-black-white-85: #e3e3e3;
+$color-alice-blue-85: #fbfdfd;
+$color-tomato-orange-15: #39140c;
+$color-full-red-15: #380000;
+$color-full-red-75: #ff8e8e;
+$color-full-red-85: #ffc6c6;
+$color-school-bus-yellow-15: #393000;
+$color-school-bus-yellow-85: #fff6c6;
+$color-school-bus-yellow-75: #ffee8e;
+$color-dark-pastel-green-85: #c7f1d4;
+$color-dark-pastel-green-75: #8fe3a8;
+$color-dark-pastel-green-15: #012b0d;
+$color-electric-indigo-0: #000000;
+$color-electric-indigo-2: #020006;
+$color-electric-indigo-4: #05000b;
+$color-electric-indigo-6: #070011;
+$color-electric-indigo-8: #0a0016;
+$color-electric-indigo-10: #0c001c;
+$color-electric-indigo-15: #190039;
+$color-electric-indigo-20: #250055;
+$color-electric-indigo-25: #310071;
+$color-electric-indigo-30: #3e008e;
+$color-electric-indigo-35: #4a00aa;
+$color-electric-indigo-40: #5600c6;
+$color-electric-indigo-45: #6300e3;
+$color-electric-indigo-50: #6f00ff;
+$color-electric-indigo-55: #7f1cff;
+$color-electric-indigo-60: #8f39ff;
+$color-electric-indigo-65: #9f55ff;
+$color-electric-indigo-70: #af71ff;
+$color-electric-indigo-75: #bf8eff;
+$color-electric-indigo-80: #cfaaff;
+$color-electric-indigo-85: #dfc6ff;
+$color-electric-indigo-90: #efe3ff;
+$color-electric-indigo-92: #f2e9ff;
+$color-electric-indigo-94: #f5eeff;
+$color-electric-indigo-96: #f9f4ff;
+$color-electric-indigo-98: #fcf9ff;
+$color-electric-indigo-100: #ffffff;
+$color-yoko-subtle-0: #021cfc00;
+$color-yoko-subtle-10: #021cfc10;
+$color-yoko-subtle-20: #021cfc20;
+$color-yoko-subtle-30: #021cfc30;
+$color-yoko-subtle-40: #021cfc40;
+$color-black-white-subtle-dark-10: #00000010;
+$color-yoko-subtle-15: #021cfc15;
+$color-yoko-subtle-25: #021cfc25;
+$color-yoko-subtle-35: #021cfc35;
+$color-black-white-subtle-dark-15: #00000015;
+$color-yoko-subtle-45: #021cfc45;
+$color-black-white-subtle-dark-20: #00000020;
+$color-yoko-subtle-50: #021cfc50;
+$color-black-white-subtle-dark-25: #00000025;
+$color-black-white-subtle-dark-30: #00000030;
+$color-yoko-subtle-5: #021cfc05;
+$color-black-white-subtle-dark-35: #00000035;
+$color-black-white-subtle-dark-40: #00000040;
+$color-black-white-subtle-dark-45: #00000045;
+$color-black-white-subtle-dark-50: #00000050;
+$color-black-white-subtle-dark-5: #00000005;
+$color-black-white-subtle-light-5: #ffffff05;
+$color-black-white-subtle-light-10: #ffffff10;
+$color-black-white-subtle-light-15: #ffffff25;
+$color-black-white-subtle-light-20: #ffffff20;
+$color-black-white-subtle-light-25: #ffffff25;
+$color-black-white-subtle-light-30: #ffffff30;
+$color-black-white-subtle-light-35: #ffffff35;
+$color-black-white-subtle-light-40: #ffffff40;
+$color-black-white-subtle-light-45: #ffffff45;
+$color-black-white-subtle-light-50: #ffffff50;
+$color-black-white-subtle-dark-0: #00000000;
+$color-black-white-subtle-light-0: #ffffff00;
+$color-full-red-subtle-0: #f60a0a00;
+$color-full-red-subtle-5: #f60a0a05;
+$color-full-red-subtle-10: #f60a0a10;
+$color-full-red-subtle-15: #f60a0a15;
+$color-full-red-subtle-20: #f60a0a20;
+$color-full-red-subtle-25: #f60a0a25;
+$color-full-red-subtle-30: #f60a0a30;
+$color-full-red-subtle-35: #f60a0a35;
+$color-full-red-subtle-40: #f60a0a40;
+$color-full-red-subtle-45: #f60a0a45;
+$color-full-red-subtle-50: #f60a0a50;
+$radius-1-5: 24px;
+$radius-2: 32px;
