--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -1,6 +1,4 @@
-@import '../../bace/color-light.scss';
-@import '../../bace/space.scss';
-@import '../../bace/radius.scss';
+@import '../../bace/style.scss';
 
 .button 
 {
