--- a/src/bace/type-style.scss
+++ b/src/bace/type-style.scss
@@ -69,13 +69,20 @@
 .font{
     
 }     
-.body1{
+.b1{
     font-family: "Titillium Web", sans-serif ;
     font-weight: 400;
     line-height: 20px;
     font-size: 16px;
 }  
-.body2{
+.b2{
     font-family: "Titillium Web", sans-serif ;
 }
+.t1-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 32px;
+  font-size: 22px;
+}
+
 }
