added search component, type-style and edited slider

--- a/src/bace/type-style.scss
+++ b/src/bace/type-style.scss
@@ -85,4 +85,10 @@
   font-size: 22px;
 }
 
+.h6-strong{
+    font-family: "Titillium Web", sans-serif ;
+    font-weight: 700;
+    line-height: 40px;
+    font-size: 25px;
+}
 }
