--- a/src/component/OrSlider/OrSlider.scss
+++ b/src/component/OrSlider/OrSlider.scss
@@ -1,11 +1,42 @@
+@import '../../bace/style.scss';
 .slider-container {
-   
-    margin: 10px 0;
+   appearance: none;
+    width: 100%;
 }
 
 .slider {
-   width: 100px;
+    appearance: none;
+    width: 100%;
+    height: 4px;
+    border-radius: $circular;
+    background-color: $neutral-bg-4-default;
+
+    &:hover{
+        background-color: $neutral-bg-4-hover; 
+    }
+   
 }
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    background: $neutral-bg-1-default;
+    border: 2px solid $brand-border-1-default;
+    border-radius: $circular;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #1104d1;
+    cursor: pointer;
+  }
+    
+    
 
 .labels {
     display: flex;
