--- a/src/component/OrSlider/OrSlider.scss
+++ b/src/component/OrSlider/OrSlider.scss
@@ -41,6 +41,5 @@
 .labels {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    padding: 0 5px;
+    padding: $space3 $space1;
 }
