Added Category section,

--- a/src/bace/type-style.scss
+++ b/src/bace/type-style.scss
@@ -91,4 +91,10 @@
     line-height: 40px;
     font-size: 25px;
 }
+.t2-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 28px;
+  font-size: 20px;
+}
 }
