--- a/src/component/OrButton/OrButton.scss
+++ b/src/component/OrButton/OrButton.scss
@@ -10,6 +10,16 @@
     transition: background-color 0.3s ease-in-out;
     cursor: pointer;
     height: fit-content;
+
+    span{
+        width: 20px;
+        height: 20px;
+
+        svg{
+            width: 100%;
+        height: 100%;
+        }
+    }
    
 }
 
@@ -132,7 +142,11 @@
 
 
 .xs{
-   
+    height: 24px;
+    padding-left: $space2;
+    padding-right: $space2;
+    padding-top: $space1;
+    padding-bottom: $space1;
 }
 
 .sm{
@@ -140,6 +154,11 @@
 } 
 
 .md{
+    height: 40px;
+    padding-left: $space4;
+    padding-right: $space4;
+    padding-top: $space2;
+    padding-bottom: $space2;
 
 }
 
