--- a/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
+++ b/src/component/OrCheckboxFilter/OrCheckboxFilter.scss
@@ -1,22 +1,70 @@
-.filter-container {
-    margin-bottom: 20px;
-}
+@import '../../bace/style.scss';
 
-.reset-button {
-    display: block;
-    margin-bottom: 10px;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
+
+.container input { /* Hide the browser's default checkbox */
+    position: absolute;
+    opacity: 0;
     cursor: pointer;
-}
+    height: 0;
+    width: 0;
+  }
 
-.reset-button:hover {
-    background-color: #0056b3;
+.category-section {
+    display: flex;
+    flex-direction: column;
 }
 
 .checkbox-container {
     margin-bottom: 8px;
+    border-radius: $space1;
+    gap: 4px;
+    
 }
+
+.category-list-title-box
+{   
+    display: flex;
+    flex: 1 1 auto;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: $space6;
+
+    
+}
+
+.checkbox{
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 50%;
+    background-color: white;
+    transition: background-color 0.2s ease-in-out;
+}
+.container{ 
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.container input ~ .checkmark{
+    background-color: $neutral-bg-1-default;
+    width: 100%;
+    padding: $space1;
+    border-radius: $space1;
+    pointer-events: fill;
+
+}
+
+.container input:hover ~ .checkmark {
+    background-color: $neutral-bg-1-hover;
+}
+
+
+.container input:checked ~ .checkmark {
+    outline: solid 2px $brand-border-1-default;
+}
+
+
+
+  
