--- a/src/style.scss
+++ b/src/style.scss
@@ -8,9 +8,12 @@
 {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
 .view{
     width: 100%;
+    height: 100%;
 }
 
 .item
