--- a/src/bace/type-style.scss
+++ b/src/bace/type-style.scss
@@ -75,6 +75,12 @@
     line-height: 20px;
     font-size: 16px;
 }  
+.b1-strong{
+  font-family: "Titillium Web", sans-serif ;
+  font-weight: 700;
+  line-height: 20px;
+  font-size: 16px;
+}  
 .b2{
     font-family: "Titillium Web", sans-serif ;
 }
