--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -2,6 +2,7 @@
 
 .icon-body{
     padding: $space8;
+     overflow: scroll;
     // display: flex;
 
 }
@@ -10,7 +11,15 @@
     grid-template-columns: repeat(5, 1fr);
     width: 100%;
 
-    @media screen and (max-width: 600px){
+    @media screen and (max-width: 1050px){
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    @media screen and (max-width: 768px){
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media screen and (max-width: 480px){
         grid-template-columns: repeat(3, 1fr);
 
     }
@@ -25,16 +34,19 @@
         text-align: center;
         vertical-align: middle;
         background-color: white ;
-        border: black 1px solid;
+        border: $neutral-border-10-default 1px solid;
         border-radius: 16px;
         margin: 4px;
         padding: 24px;
         height: 80px;
         cursor: pointer;
-        transition: background-color 0.3s ease-in-out;
+        color: $neutral-fg-4-default;
+        text-decoration: none;
+        
         
         &:hover{
-            background-color: rgb(231, 231, 231) ;
+            border: $neutral-border-10-default 1px solid;
+            background-color: $neutral-bg-1-hover;
         }
         
       }
