--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -10,11 +10,29 @@
     top: 0px;
     display: flex;
     flex-direction: column;
+    z-index: 2;
+
+
+    @media screen and (max-width: 768px){
+        position: fixed;
+    }
 
     @media screen and (max-width: 600px){
-       position: absolute;
+       position: fixed;
        width: 100%;
 
+    }
+
+    ::backdrop {   
+        @media screen and (max-width: 768px){
+        background-color: rgb(0, 0, 0);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        }
     }
     
 }
@@ -33,9 +51,26 @@
 .customize-section{
     padding: $space6;
     border-bottom: solid 1px $neutral-border-7-default;
+    display: flex;
+    flex-direction: column;
+    gap: $space6;
 }
 
 .category-section{
     padding: $space6;
     
 }
+// .backdrop{
+//     z-index: 6;
+    
+
+//     @media screen and (max-width: 768px){
+//         position: fixed;
+//         top: 0;
+//         left: 0;
+//         width: 100%;
+//         height: 100%;
+//         background-color: rgba(0, 0, 0, 0.5);
+//         z-index: 1;
+//     }
+// }
