--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -39,6 +39,7 @@
 .filter-header{
     display: flex;
     position: sticky;
+    justify-content: space-between;
     top: 0px;
     align-items: center;
     padding: $space4 $space6;
@@ -46,6 +47,12 @@
     border-bottom: 1px solid $neutral-border-7-default;
     background-color: $neutral-bg-1-default;
     z-index: 1;
+
+    div{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
 }
 
 .customize-section{
