--- a/src/component/OrSwitch/OrSwitch.scss
+++ b/src/component/OrSwitch/OrSwitch.scss
@@ -4,8 +4,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
-
 }
 
 .switch {
@@ -13,47 +11,54 @@
     display: inline-block;
     width: 40px;
     height: 20px;
-}
 
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
+    input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 
-.slider-switch {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: $neutral-bg-1-default;
-    border: 1px solid $neutral-border-2-default;
-    transition: .4s;
-    border-radius: 34px;
-}
+    .slider-switch {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $neutral-bg-1-default;
+        outline:1px solid $neutral-border-2-default ;
+        transition: 0.4s;
+        border-radius: 34px;
 
-.slider-switch:before {
-    position: absolute;
-    height: 26px;
-    width: 26px;
-    border-radius: 50%;
-    left: 4px;
-    bottom: 4px;
-    background-color: rgb(160, 32, 32);
-    transition: .4s;
-}
+        &:hover{
+            background: $neutral-bg-1-hover;
+           
+        }
 
-input:checked + .slider {
-    background-color: #10e650;
-}
+        &:before {
+            content: "";
+            position: absolute;
+            height: 12px;
+            width: 12px;
+            left: 4px; // جابه‌جایی اولیه handle
+            bottom: 4px;
+            background-color: $neutral-fg-5-default;
+            border-radius: 50%;
+            transition: 0.4s;
+        }
+    }
 
-input:checked + .slider:before {
-    transform: translateX(26px);
-}
+    input:checked + .slider-switch {
+        background-color: $brand-bg-1-default;
+        outline: 1px solid $brand-border-1-default; // رنگ پس‌زمینه در حالت checked
 
-.switch-label {
-    margin-left: 10px;
-    font-size: 14px;
+        &:hover { background: $brand-bg-1-hover;}
+    }
+
+    input:checked + .slider-switch:before {
+        transform: translateX(20px); // جابه‌جایی handle در حالت checked
+        background-color: $neutral-bg-1-default;
+
+        &:hover { background: $neutral-bg-1-hover;}
+    }
 }
