Added responsive, final filter style

--- a/src/component/IconList/IconList.scss
+++ b/src/component/IconList/IconList.scss
@@ -2,21 +2,20 @@
 
 .icon-body{
     padding: $space8;
-     overflow: scroll;
-    // display: flex;
+    display: flex;
 
 }
 .icon-list{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(7, 2fr);
     width: 100%;
 
-    @media screen and (max-width: 1050px){
-        grid-template-columns: repeat(4, 1fr);
+    @media screen and (max-width: 1200px){
+        grid-template-columns: repeat(5, 1fr);
     }
 
     @media screen and (max-width: 768px){
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 
     @media screen and (max-width: 480px){
