--- a/src/component/OrFilter/OrFilter.scss
+++ b/src/component/OrFilter/OrFilter.scss
@@ -1,16 +1,14 @@
 @import '../../bace/style.scss';
 
 .or-filter {
-    background-color: $neutral-bg-1-default;
-    border-right: 1px solid $neutral-border-7-default;
-    width: 320px;
     min-width: 320px;
-    height: auto;
-    position: sticky;
-    top: 0px;
     display: flex;
     flex-direction: column;
-    z-index: 2;
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    transition: background-color 0.3s ease-in-out;
+    
 
 
     @media screen and (max-width: 768px){
@@ -22,31 +20,30 @@
        width: 100%;
 
     }
-
-    ::backdrop {   
-        @media screen and (max-width: 768px){
-        background-color: rgb(0, 0, 0);
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        }
-    }
-    
+   
 }
+
+.filter-body{
+    z-index: 2;
+    background: $neutral-bg-1-default;
+    border-right: 1px solid $neutral-border-7-default;
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    overflow-y: auto;
+    }
+
 .filter-header{
     display: flex;
-    position: sticky;
     justify-content: space-between;
-    top: 0px;
     align-items: center;
     padding: $space4 $space6;
     gap: $space1;
     border-bottom: 1px solid $neutral-border-7-default;
     background-color: $neutral-bg-1-default;
-    z-index: 1;
+    z-index: 10;
+    position: sticky;
+    top: 0;
 
     div{
         display: flex;
@@ -61,23 +58,27 @@
     display: flex;
     flex-direction: column;
     gap: $space6;
+
+
 }
 
 .category-section{
     padding: $space6;
+    overflow-y: auto;
     
 }
-// .backdrop{
-//     z-index: 6;
-    
 
-//     @media screen and (max-width: 768px){
-//         position: fixed;
-//         top: 0;
-//         left: 0;
-//         width: 100%;
-//         height: 100%;
-//         background-color: rgba(0, 0, 0, 0.5);
-//         z-index: 1;
-//     }
-// }
+.checkbox-section{
+   
+}
+.backdrop{
+     z-index: 1;
+    @media screen and (max-width: 768px){
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+}
