--- a/src/component/OrSubHeader/OrSubHeader.scss
+++ b/src/component/OrSubHeader/OrSubHeader.scss
@@ -2,7 +2,11 @@
 
 .sub-header
 {
+    position: sticky;
+    top: 116px;
     background-color: $neutral-bg-1-default;
     border-bottom: 1px solid $neutral-border-7-default;
-    padding: $space6;
+    padding: $space2 $space6;
+
+
 }
