--- a/src/style.scss
+++ b/src/style.scss
@@ -8,11 +8,12 @@
 {
     display: flex;
     flex-direction: row;
-   
+ 
 }
 .view{
-     width: 100%;
-    height: 100%;
+    width: 100%;
+    min-width: 0;
+   
 } 
 
 .item
