--- a/src/component/OrSlider/OrSlider.scss
+++ b/src/component/OrSlider/OrSlider.scss
@@ -1,4 +1,4 @@
-@import '../../bace/style.scss';
+@import '../../base/style.scss';
 .slider-container {
    appearance: none;
    position: relative;
